third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/structs_visibility/round-trip/test_positional_field_api.decompiled
//**** Cross-compiled for `move` syntax from `tests/no-v1-comparison/structs_visibility/test_positional_field_api.move`

//# publish
module 0x42::m1 {
    struct NestedPair<T0: drop> has drop {
        _0: Pair,
        _1: Wrapper<T0>,
    }
    struct Pair has copy, drop {
        _0: u64,
        _1: bool,
    }
    struct Wrapper<T0: drop> has drop {
        _0: T0,
    }
    struct VecWrap<T0: drop> has drop {
        _0: vector<T0>,
    }
    #[pack]
    public fun pack_0x42_m1_NestedPair<T0: drop>(p0: Pair, p1: Wrapper<T0>): NestedPair<T0> {
        NestedPair<T0>{_0: p0, _1: p1}
    }
    #[unpack]
    public fun unpack_0x42_m1_NestedPair<T0: drop>(p0: NestedPair<T0>): (Pair, Wrapper<T0>) {
        let NestedPair<T0>{_0: _v0, _1: _v1} = p0;
        (_v0, _v1)
    }
    #[borrow]
    public fun borrow_0x42_m1_NestedPair_0_0<T0: drop>(p0: &NestedPair<T0>): &Pair {
        &p0._0
    }
    #[borrow]
    public fun borrow_0x42_m1_NestedPair_1_1<T0: drop>(p0: &NestedPair<T0>): &Wrapper<T0> {
        &p0._1
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_m1_NestedPair_0_0<T0: drop>(p0: &mut NestedPair<T0>): &mut Pair {
        &mut p0._0
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_m1_NestedPair_1_1<T0: drop>(p0: &mut NestedPair<T0>): &mut Wrapper<T0> {
        &mut p0._1
    }
    #[pack]
    public fun pack_0x42_m1_Pair(p0: u64, p1: bool): Pair {
        Pair{_0: p0, _1: p1}
    }
    #[unpack]
    public fun unpack_0x42_m1_Pair(p0: Pair): (u64, bool) {
        let Pair{_0: _v0, _1: _v1} = p0;
        (_v0, _v1)
    }
    #[borrow]
    public fun borrow_0x42_m1_Pair_0_0(p0: &Pair): &u64 {
        &p0._0
    }
    #[borrow]
    public fun borrow_0x42_m1_Pair_1_1(p0: &Pair): &bool {
        &p0._1
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_m1_Pair_0_0(p0: &mut Pair): &mut u64 {
        &mut p0._0
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_m1_Pair_1_1(p0: &mut Pair): &mut bool {
        &mut p0._1
    }
    #[pack]
    public fun pack_0x42_m1_VecWrap<T0: drop>(p0: vector<T0>): VecWrap<T0> {
        VecWrap<T0>{_0: p0}
    }
    #[unpack]
    public fun unpack_0x42_m1_VecWrap<T0: drop>(p0: VecWrap<T0>): vector<T0> {
        let VecWrap<T0>{_0: _v0} = p0;
        _v0
    }
    #[borrow]
    public fun borrow_0x42_m1_VecWrap_0_0<T0: drop>(p0: &VecWrap<T0>): &vector<T0> {
        &p0._0
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_m1_VecWrap_0_0<T0: drop>(p0: &mut VecWrap<T0>): &mut vector<T0> {
        &mut p0._0
    }
    #[pack]
    public fun pack_0x42_m1_Wrapper<T0: drop>(p0: T0): Wrapper<T0> {
        Wrapper<T0>{_0: p0}
    }
    #[unpack]
    public fun unpack_0x42_m1_Wrapper<T0: drop>(p0: Wrapper<T0>): T0 {
        let Wrapper<T0>{_0: _v0} = p0;
        _v0
    }
    #[borrow]
    public fun borrow_0x42_m1_Wrapper_0_0<T0: drop>(p0: &Wrapper<T0>): &T0 {
        &p0._0
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_m1_Wrapper_0_0<T0: drop>(p0: &mut Wrapper<T0>): &mut T0 {
        &mut p0._0
    }
}


//# publish
module 0x42::m2 {
    use 0x42::m1;
    public fun test_borrow_nested_pair_fields() {
        let _v0 = m1::pack_0x42_m1_Pair(1, false);
        let _v1 = m1::pack_0x42_m1_Wrapper<u64>(99);
        let _v2 = m1::pack_0x42_m1_NestedPair<u64>(_v0, _v1);
        let _v3 = m1::borrow_0x42_m1_Pair_0_0(m1::borrow_0x42_m1_NestedPair_0_0<u64>(&_v2));
        let _v4 = m1::borrow_0x42_m1_Pair_1_1(m1::borrow_0x42_m1_NestedPair_0_0<u64>(&_v2));
        let _v5 = m1::borrow_0x42_m1_Wrapper_0_0<u64>(m1::borrow_0x42_m1_NestedPair_1_1<u64>(&_v2));
        assert!(*_v3 == 1, 3);
        if (*_v4) abort 4;
        assert!(*_v5 == 99, 5);
    }
    public fun test_borrow_pair_fields() {
        let _v0 = m1::pack_0x42_m1_Pair(42, true);
        let _v1 = m1::borrow_0x42_m1_Pair_0_0(&_v0);
        let _v2 = m1::borrow_0x42_m1_Pair_1_1(&_v0);
        assert!(*_v1 == 42, 0);
        assert!(*_v2, 1);
    }
    public fun test_borrow_vecwrap_element() {
        let _v0 = m1::pack_0x42_m1_VecWrap<u64>(vector[10, 20, 30]);
        let _v1 = 0x1::vector::borrow<u64>(m1::borrow_0x42_m1_VecWrap_0_0<u64>(&_v0), 0);
        let _v2 = 0x1::vector::borrow<u64>(m1::borrow_0x42_m1_VecWrap_0_0<u64>(&_v0), 1);
        assert!(*_v1 == 10, 6);
        assert!(*_v2 == 20, 7);
    }
    public fun test_borrow_wrapper_field() {
        let _v0 = m1::pack_0x42_m1_Wrapper<u64>(100);
        assert!(*m1::borrow_0x42_m1_Wrapper_0_0<u64>(&_v0) == 100, 2);
    }
    public fun test_mut_borrow_nestedpair() {
        let _v0 = m1::pack_0x42_m1_Pair(0, true);
        let _v1 = m1::pack_0x42_m1_Wrapper<u64>(77);
        let _v2 = m1::pack_0x42_m1_NestedPair<u64>(_v0, _v1);
        let _v3 = &mut _v2;
        let _v4 = m1::borrow_mut_0x42_m1_Pair_0_0(m1::borrow_mut_0x42_m1_NestedPair_0_0<u64>(_v3));
        *_v4 = 123;
        _v4 = m1::borrow_mut_0x42_m1_Wrapper_0_0<u64>(m1::borrow_mut_0x42_m1_NestedPair_1_1<u64>(_v3));
        *_v4 = 456;
        assert!(*m1::borrow_0x42_m1_Pair_0_0(m1::borrow_0x42_m1_NestedPair_0_0<u64>(&_v2)) == 123, 10);
        assert!(*m1::borrow_0x42_m1_Wrapper_0_0<u64>(m1::borrow_0x42_m1_NestedPair_1_1<u64>(&_v2)) == 456, 11);
    }
    public fun test_mut_borrow_nestedpair_2() {
        let _v0 = m1::pack_0x42_m1_Pair(0, true);
        let _v1 = m1::pack_0x42_m1_Wrapper<u64>(77);
        let _v2 = m1::pack_0x42_m1_NestedPair<u64>(_v0, _v1);
        let _v3 = &mut _v2;
        let _v4 = m1::borrow_mut_0x42_m1_NestedPair_0_0<u64>(_v3);
        let _v5 = m1::borrow_mut_0x42_m1_NestedPair_1_1<u64>(_v3);
        let _v6 = m1::borrow_mut_0x42_m1_Pair_0_0(_v4);
        let _v7 = m1::borrow_mut_0x42_m1_Wrapper_0_0<u64>(_v5);
        *_v6 = 123;
        *_v7 = 456;
        assert!(*m1::borrow_0x42_m1_Pair_0_0(m1::borrow_0x42_m1_NestedPair_0_0<u64>(&_v2)) == 123, 10);
        assert!(*m1::borrow_0x42_m1_Wrapper_0_0<u64>(m1::borrow_0x42_m1_NestedPair_1_1<u64>(&_v2)) == 456, 11);
    }
    public fun test_mut_borrow_pair() {
        let _v0 = m1::pack_0x42_m1_Pair(7, false);
        let _v1 = m1::borrow_mut_0x42_m1_Pair_0_0(&mut _v0);
        *_v1 = 8;
        assert!(*m1::borrow_0x42_m1_Pair_0_0(&_v0) == 8, 8);
    }
    public fun test_mut_borrow_vecwrap_element() {
        let _v0 = m1::pack_0x42_m1_VecWrap<u64>(vector[1, 2, 3]);
        let _v1 = 0x1::vector::borrow_mut<u64>(m1::borrow_mut_0x42_m1_VecWrap_0_0<u64>(&mut _v0), 1);
        *_v1 = 10;
        assert!(*0x1::vector::borrow<u64>(m1::borrow_0x42_m1_VecWrap_0_0<u64>(&_v0), 1) == 10, 9);
    }
}


//# run 0x42::m2::test_borrow_pair_fields

//# run 0x42::m2::test_borrow_wrapper_field

//# run 0x42::m2::test_borrow_nested_pair_fields

//# run 0x42::m2::test_borrow_vecwrap_element

//# run 0x42::m2::test_mut_borrow_pair

//# run 0x42::m2::test_mut_borrow_vecwrap_element

//# run 0x42::m2::test_mut_borrow_nestedpair

//# run 0x42::m2::test_mut_borrow_nestedpair_2